--- a/src/Knp/Bundle/Symfony2BundlesBundle/Resources/views/Repo/list.html.twig
+++ b/src/Knp/Bundle/Symfony2BundlesBundle/Resources/views/Repo/list.html.twig
@@ -5,9 +5,8 @@
 {% block content %}
     <div id="main">
         <div id="sort">
-            <span class="sort-by">Sort by</span>
             <ul class="tabs" id="repo-tabs">
-                {%- for field, text in sortFields %}
+                {%- for field, text in sortLegends %}
                 <li{{ field == sort ? ' class="current"' : '' }}>
                     <a href='{% block route_list %}{{ path('bundle_list', {'sort': field}) }}{% endblock %}'>{{ text }}</a>
                 </li>
