--- a/src/Knp/Bundle/Symfony2BundlesBundle/Resources/views/Bundle/list.html.twig
+++ b/src/Knp/Bundle/Symfony2BundlesBundle/Resources/views/Bundle/list.html.twig
@@ -1,7 +1,7 @@
 {% extends 'KnpSymfony2BundlesBundle:Repo:list.html.twig' %}
 
-{% block h1 %}All {{ repos.totalItemCount }} Bundles{% endblock %}
+{% block h1 %}Discover {{ repos.totalItemCount }} Symfony2 Bundles{% endblock %}
 
-{% block title %}All {{ repos.totalItemCount }} Bundles{% endblock %}
+{% block title %}Discover {{ repos.totalItemCount }} Symfony2 Bundles{% endblock %}
 
-{% block description %}All Open Source Symfony2 Bundles sorted by {{ sort }}{% endblock %}
+{% block description %}All Open Source Symfony 2 Bundles sorted by {{ sort }}{% endblock %}
