--- a/src/Knp/Bundle/Symfony2BundlesBundle/Resources/views/Repo/listLatest.atom.twig
+++ b/src/Knp/Bundle/Symfony2BundlesBundle/Resources/views/Repo/listLatest.atom.twig
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <feed xmlns="http://www.w3.org/2005/Atom" xmlns:media="http://search.yahoo.com/mrss/" xml:lang="en-US">
     <id>Symfony2 Bundles &amp; Projects</id>
-    <link type="text/html" rel="alternate" href="{{ url('bundle_list', {'sort': 'createdAt'}) }}"/>
-    <link type="application/atom+xml" rel="self" href="{{ url('latest', {'_format': 'atom'}) }}"/>
+    <link type="text/html" rel="alternate" href="{{ url('bundle_list', {'sort': 'newest'}) }}"/>
+    <link type="application/atom+xml" rel="self" href="{{ url('latest', {'format': 'atom'}) }}"/>
     <title>Symfony2 Bundles &amp; Projects</title>
     <updated>{{ 'now'|date('c') }}</updated>
     {%- for repo in repos %}
@@ -14,11 +14,10 @@
         <title>{{ repo.name }}</title>
         <author>
             <name>{{ repo.username }}</name>
-            <uri>http://github.com/{{ repo.username }}</uri>
+            <uri>https://github.com/{{ repo.username }}</uri>
         </author>
         <content type="html">
             &lt;strong&gt;{{ repo.description }}&lt;/strong&gt;&lt;br /&gt;
-            {{ repo.readme|markdown|e }}
         </content>
     </entry>
     {%- endfor %}
