--- a/src/Knp/Bundle/Symfony2BundlesBundle/Resources/views/Repo/show.html.twig
+++ b/src/Knp/Bundle/Symfony2BundlesBundle/Resources/views/Repo/show.html.twig
@@ -5,54 +5,55 @@
 {% block title %}{{ repo.name }} by {{ repo.username }}{% endblock %}
 
 {% block content_title %}
-<h1>{{ repo.name }}</h1>
-<ul class="user-list">
-    <li class="user">
-        by <a href="{{ path('user_show', {'name': repo.username}) }}">{{ repo.username }}</a>{% if repo.nbContributors != 0 %},{% endif %}
-    </li>
-
-    {%- if repo.nbContributors != 0 %}
-    {%- for contributor in repo.contributors %}
-        <li class="contributor"><a href="{{ path('user_show', {'name': contributor}) }}">{{ contributor }}</a>{% if not loop.last %},{% endif %}</li>
-    {%- endfor %}
-    {%- endif %}
-</ul>
-<div class="actions">
-    <a class="button github" href="{{ repo.gitHubUrl }}">View on Github</a>
+<div id="repo-title">
+    <h1>{{ repo.name }}</h1>
+    <div class="actions" style="float:left">
+        <a class="button github" href="{{ repo.gitHubUrl }}">View on Github</a>
+    </div>
 </div>
 {% endblock %}
 
 {% block description %}{{ repo.description }}{% endblock %}
 
 {% block content %}
+    <div class="commits">
+        <h3>Infos</h3>
+        <ul>
+            <li>Score: <span>{{ repo.score }}</span></li>
+            <li>Created <span>{{ repo.createdAt|date('Y-m-d') }}</span></li>
+            <li>Nb of contributors: <span>{{ repo.nbContributors }}</span></li>
+            <li>Nb of followers: <span>{{ repo.nbFollowers }}</span></li>
+        </ul>
+        
+        <h3>Latest commits</h3>
+        <ul>
+        {%- for commit in repo.lastCommits %}
+            <li>{{ commit.message_first_line }}<div class="infos">by <a href="{{ path('user_show', {'name': commit.author.login }) }}">{{ commit.author.login }}</a> {{ time_diff(commit.committed_date) }}</div></li>
+        {%- endfor %}
+        <ul>
+    </div>
+    
     <div id="main">
-
         <div class="details">
-            <ul class="infos">
-                <li>Score <span>{{ repo.score }}</span></li>
-                <li>Created the <span>{{ repo.createdAt|date('Y-m-d') }}</span></li>
-                <li>Nb of contributors <span>{{ repo.nbContributors }}</span></li>
-                <li>Nb of followers <span>{{ repo.nbFollowers }}</span></li>
-            </ul>
             <p class="description">{{ repo.description }}</p>
         </div>
     </div>
 
-    <div class="commits">
-    <span>Latest commits</span>
-    <ul>
-    {%- for commit in repo.lastCommits %}
-        <li>{{ commit.message_first_line }}<div class="infos">by <a href="{{ path('user_show', {'name': commit.author.login }) }}">{{ commit.author.login }}</a> {{ time_diff(commit.committed_date) }}</div></li>
-    {%- endfor %}
-    <ul>
-    </div>
+    <ul class="user-list">
+        <li class="user">
+            by <a href="{{ path('user_show', {'name': repo.username}) }}">{{ repo.username }}</a>{% if repo.nbContributors != 0 %},{% endif %}
+        </li>
+
+        {%- if repo.nbContributors != 0 %}
+        {%- for contributor in repo.contributors %}
+            <li class="contributor"><a href="{{ path('user_show', {'name': contributor}) }}">{{ contributor }}</a>{% if not loop.last %},{% endif %}</li>
+        {%- endfor %}
+        {%- endif %}
+    </ul>
 
     {% if repo.readme %}
     <div id="data">
-        <ul class="tabs">
-            <li class="current"><a href="#readme">Readme</a></li>
-        </ul>
-        <div id="readme" class="tab-content">
+        <div id="readme">
             <div class="markdown">
                 {{ repo.readme|markdown }}
             </div>
