--- a/src/Knp/Bundle/Symfony2BundlesBundle/Resources/views/User/list.html.twig
+++ b/src/Knp/Bundle/Symfony2BundlesBundle/Resources/views/User/list.html.twig
@@ -2,18 +2,17 @@
 
 {% block body_attributes %}id="developers-list"{% endblock %}
 
-{% block h1 %}All {{ users.totalItemCount }} Symfony2 Developers{% endblock %}
+{% block h1 %}Discover {{ users.totalItemCount }} Symfony2 Developers{% endblock %}
 
-{% block title %}All {{ users.totalItemCount }} Symfony2 Developers{% endblock %}
+{% block title %}Discover {{ users.totalItemCount }} Symfony2 Developers{% endblock %}
 
-{% block description %}Symfony2 Bundle developers{% endblock %}
+{% block description %}Symfony 2 developers{% endblock %}
 
 {% block content %}
     <div id="main">
         <div id="sort">
-            <span class="sort-by">Sort by</span>
             <ul class="tabs">
-                {%- for field, text in sortFields %}
+                {%- for field, text in sortLegends %}
                 <li{{ field == sort ? ' class="current"' : '' }}>
                     <a href='{{ path('user_list', {'sort': field}) }}'>{{ text }}</a>
                 </li>
@@ -30,7 +29,10 @@
                 </div>
                 <div class="generals">
                     <a class="name" href="{{ url('user_show', {'name': user.name}) }}">{{ user.name }}</a>
+                    {%- if user.location %}
+                    from
                     <span class="location">{{ user.location }}</span>
+                    {%- endif %}
                 </div>
                 <div class="details">
                     <ul class="infos">
