--- a/src/Knp/Bundle/Symfony2BundlesBundle/Resources/views/layout.html.twig
+++ b/src/Knp/Bundle/Symfony2BundlesBundle/Resources/views/layout.html.twig
@@ -5,7 +5,7 @@
     <title>{% block title %}{% endblock %} | Symfony2 Bundles</title>
     <meta name="description" content="{% block description %}{% endblock %}" />
     <link rel="shortcut icon" href="{{ asset('favicon.png') }}" type="image/png" />
-    <link href="{{ path('latest', {'_format': 'atom'}) }}" rel="alternate" title="ATOM" type="application/atom+xml" />
+    <link href="{{ path('latest', {'format': 'atom'}) }}" rel="alternate" title="ATOM" type="application/atom+xml" />
     <link href="{{ asset('bundles/knpsymfony2bundles/css/reset.css') }}" rel="stylesheet" type="text/css" media="screen" />
     <link href="{{ asset('bundles/knpsymfony2bundles/css/style.css') }}" rel="stylesheet" type="text/css" media="screen" />
     <script type="text/javascript">
@@ -23,9 +23,6 @@
     </script>
 </head>
 <body {% block body_attributes %}{% endblock %}>
-    <div class="ribbon">
-        <a href="http://github.com/knplabs/symfony2bundles"><img style="position: absolute; top: 0; right: 0; border: 0;z-index:1000;" src="https://assets2.github.com/img/30f550e0d38ceb6ef5b81500c64d970b7fb0f028?repo=&url=http%3A%2F%2Fs3.amazonaws.com%2Fgithub%2Fribbons%2Fforkme_right_orange_ff7600.png&path=" alt="Fork me on GitHub"></a>
-    </div>
     <div id="header">
         <div id="header-inner">
             <a href="{{ path('bundle_list') }}" title="Back to the homepage" id="logo">
@@ -56,32 +53,22 @@
         <div id="footer">
             <div id="footer-inner">
                 <dl>
-                    <dt><a href="{{ path('bundle_list') }}">Bundles</a></dt>
+                    <dt><a href="{{ path('bundle_list') }}">Symfony2 Bundles</a></dt>
                     <dd>
                         <ul>
-                            <li><a href="{{ path('bundle_list', {'sort': 'best'}) }}">by score</a></li>
-                            <li><a href="{{ path('bundle_list', {'sort': 'updated'}) }}">by last commit date</a></li>
-                            <li><a href="{{ path('bundle_list', {'sort': 'newest'}) }}">by creation date</a></li>
+                            <li><a href="https://github.com/symfony2bundles">Show the code on Github</a></li>
+                            <li><a href="{{ path('api') }}">API</a></li>
                         </ul>
                     </dd>
                 </dl>
                 <dl>
-                    <dt><a href="{{ path('project_list') }}">Projects</a></dt>
+                    <dt><a href="http://www.knplabs.com">Knp Labs</a></dt>
                     <dd>
                         <ul>
-                            <li><a href="{{ path('project_list', {'sort': 'best'}) }}">by score</a></li>
-                            <li><a href="{{ path('project_list', {'sort': 'name'}) }}">by name</a></li>
-                            <li><a href="{{ path('project_list', {'sort': 'lastCommitAt'}) }}">by last commit date</a></li>
-                            <li><a href="{{ path('project_list', {'sort': 'createdAt'}) }}">by creation date</a></li>
-                        </ul>
-                    </dd>
-                </dl>
-                <dl>
-                    <dt><a href="{{ path('user_list') }}">Developers</a></dt>
-                    <dd>
-                        <ul>
-                            <li><a href="{{ path('user_list', {'sort': 'name'}) }}">by name</a></li>
-                            <li><a href="{{ path('user_list', {'sort': 'best'}) }}">by score</a></li>
+                            <li><a href="http://www.knplabs.com">Symfony2 consulting</a></li>
+                            <li><a href="http://www.knplabs.com/en/symfony-training-nyc-nashville-us">Symfony2 trainings</a></li>
+                            <li><a href="http://twitter.com/knplabs">Knp on Twitter</a></li>
+                            <li><a href="http://behat.org">Behat: BDD framework for PHP</a></li>
                         </ul>
                     </dd>
                 </dl>
@@ -96,5 +83,8 @@
             </div>
         </div>
     </div><!-- /#footer-wrapper -->
+    <link rel="stylesheet" href="http://yandex.st/highlightjs/6.0/styles/github.min.css">
+    <script src="http://yandex.st/highlightjs/6.0/highlight.min.js"></script>
+    <script>hljs.initHighlightingOnLoad();</script>
 </body>
 </html>
