--- a/src/Knp/Bundle/Symfony2BundlesBundle/Resources/views/Repo/bigList.html.twig
+++ b/src/Knp/Bundle/Symfony2BundlesBundle/Resources/views/Repo/bigList.html.twig
@@ -19,7 +19,7 @@
         <div class="details">
             <ul class="infos">
                 <li>Created <span>{{ repo.createdAt|date('Y-m-d') }}</span></li>
-                <li>Last update <span>{{ repo.updatedAt|date('Y-m-d') }}</span></li>
+                <li>Last commit <span>{{ repo.lastCommitAt|date('Y-m-d') }}</span></li>
             </ul>
         </div>
     </li>
