--- a/src/Knp/Bundle/Symfony2BundlesBundle/Resources/views/Repo/show.html.twig
+++ b/src/Knp/Bundle/Symfony2BundlesBundle/Resources/views/Repo/show.html.twig
@@ -7,8 +7,9 @@
 {% block content_title %}
 <div id="repo-title">
     <h1>{{ repo.name }}</h1>
-    <div class="actions" style="float:left">
-        <a class="button github" href="{{ repo.gitHubUrl }}">View on Github</a>
+    <div class="actions">
+        <div id="repo-gplusone"><g:plusone></g:plusone></div>
+        <a class="button github" style="float:right; margin-top: 20px; margin-right: 40px;" href="{{ repo.gitHubUrl }}">View and download on Github</a>
     </div>
 </div>
 {% endblock %}
