--- a/src/Knp/Bundle/Symfony2BundlesBundle/Resources/views/layout.html.twig
+++ b/src/Knp/Bundle/Symfony2BundlesBundle/Resources/views/layout.html.twig
@@ -87,5 +87,6 @@
     <link rel="stylesheet" href="http://yandex.st/highlightjs/6.0/styles/github.min.css">
     <script src="http://yandex.st/highlightjs/6.0/highlight.min.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
-</body>
+    <script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
+    </body>
 </html>
