--- a/src/Knp/Bundle/Symfony2BundlesBundle/Resources/views/layout.html.twig
+++ b/src/Knp/Bundle/Symfony2BundlesBundle/Resources/views/layout.html.twig
@@ -32,6 +32,8 @@
                 <img src="{{ asset('bundles/knpsymfony2bundles/images/knplabs.png') }}" alt="KnpLabs" />
             </a>
             {{ menu('main') }}
+            <div id="global-gplusone"><g:plusone href="http://symfony2bundles.org/"></g:plusone></div>
+            
         </div>
     </div><!-- /#header -->
 
