--- a/src/Knp/Bundle/Symfony2BundlesBundle/Resources/views/Repo/bigList.html.twig
+++ b/src/Knp/Bundle/Symfony2BundlesBundle/Resources/views/Repo/bigList.html.twig
@@ -5,9 +5,11 @@
             <div class="bundlerank">
                 {{ repo.score }}
             </div>
+            {% if repo.user.email %}
             <a href="{{ path('repo_show', {'username': repo.username, 'name': repo.name}) }}" class="name">
-                <img src="{{ gravatar(repo.user.email, 50) }}" alt="{{ repo.name }}" />
+                <img src="{{ gravatar(repo.user.email, 50, none, 'identicon') }}" alt="{{ repo.name }}" />
             </a>
+            {% endif %}
         </div>
         <div class="generals">
             <div class="repo-title">
