--- a/src/Knp/Bundle/Symfony2BundlesBundle/Resources/views/layout.html.twig
+++ b/src/Knp/Bundle/Symfony2BundlesBundle/Resources/views/layout.html.twig
@@ -89,6 +89,7 @@
     <link rel="stylesheet" href="http://yandex.st/highlightjs/6.0/styles/github.min.css">
     <script src="http://yandex.st/highlightjs/6.0/highlight.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
+    <script src="{{ asset('bundles/knpsymfony2bundles/js/jquery.hotkeys.js') }}"></script>
     <script>hljs.initHighlightingOnLoad();</script>
     <script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
     <script type="text/javascript" charset="utf-8">
@@ -96,34 +97,34 @@
             //code to control keyboard navigation
             var listCount = $('.repo').size();
             var curPosition = 0;
-            $('.repo').first().css('border','1px solid #333333');
-            document.onkeydown=function(e) {
-                if (e.which == 83) {
-                    document.getElementById('search-query').focus();
 
-                    return false;
-                } else if (e.which == 40) {
-                    if (++curPosition < listCount) {
-                            $('.repo').eq(curPosition-1).css('border','none');
-                            $('.repo').eq(curPosition).css('border','1px solid #333333');
-                            $('html,body').animate({ scrollTop: $('.repo').eq(curPosition).offset().top }, 'normal');
-                    } else {
-                        curPosition--;
-                    }
+            $('.repo').first().css('border','1px solid blue');
 
-                    return false;
-                } else if (e.which == 38) {
-                    if (--curPosition >= 0) {
-                            $('.repo').eq(curPosition+1).css('border','none');
-                            $('.repo').eq(curPosition).css('border','1px solid #333333');
-                            $('html,body').animate({ scrollTop: $('.repo').eq(curPosition).offset().top }, 'normal');
-                    } else{
-                        curPosition++;
-                    }
+            $(document).bind('keydown', 's', function() { $('#search-query').focus(); return false; });
 
-                    return false;
+            $(document).bind('keydown', 'down', function() {
+                if (++curPosition < listCount) {
+                        $('.repo').eq(curPosition-1).css('border','1px solid #DDDDDD');
+                        $('.repo').eq(curPosition).css('border','1px solid blue');
+                        $('html, body').animate({scrollTop: $('.repo').eq(curPosition).offset().top}, 100);
+                } else {
+                    curPosition--;
                 }
-            }
+
+                return false;
+            });
+
+            $(document).bind('keydown', 'up', function(){
+                if (--curPosition >= 0) {
+                        $('.repo').eq(curPosition+1).css('border','1px solid #DDDDDD');
+                        $('.repo').eq(curPosition).css('border','1px solid blue');
+                        $('html, body').animate({scrollTop: $('.repo').eq(curPosition).offset().top}, 100);
+                } else{
+                    curPosition++;
+                }
+
+                return false;
+            });
         }
     </script>
     </body>
